# unicore

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/api/: deps.py
app/api/routers/: auth.py
app/core/: config.py
app/schemas/: auth.py
app/tests/: conftest.py  test_auth.py  test_main.py
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  logging.py
docs/: api-specification.md  architecture.md  development.md  domain-model.md  specification.md
